[package]
name = "docsismon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "2.33.3"
fastping-rs = "0.2"
html5ever = "0.25.1"
reqwest = {version = "0.11", features = ["blocking"]}